@@ -23,7 +23,7 @@ GMailS=Sign
 GMailSS=Sign and Send
 GMailC=Crypt
 GMailCS=Crypt and Send
-GMailSOK=The first sign of this is mail is
+GMailSOK=Good sign from 
 GMailNoS=No signature found in this mail!
 GMailSErr=The first signature of this mail is not valid!
 GMailD=Decrypt this mail
